--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
+    "socket.io-client": "^3.0.4",
     "sweetalert2": "^10.12.6",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
