--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-browser-geolocation": "^1.8.0",
     "vue-router": "^3.2.0",
+    "vue-toastification": "^1.7.8",
     "vue2-google-maps": "^0.10.7",
     "vue2-leaflet": "^2.6.0",
     "vuex": "^3.4.0"
