--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sweetalert2": "^10.12.6",
     "vue": "^2.6.11",
     "vue-browser-geolocation": "^1.8.0",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-router": "^3.2.0",
     "vue-toastification": "^1.7.8",
     "vue2-google-maps": "^0.10.7",
